# Rizumu

./: .gitignore  README.md  test_stream.sh
backend/: go.mod  go.sum  main.go
backend/downloader/: metadata.go  models.go  osu_parser.go  service.go
backend/httpd/: auth_handlers.go  handlers.go  playlist_handler.go  router.go  song_handlers.go  stream_handlers.go  task_handlers.go  user_handlers.go
backend/ipc/: protocol.go  socket.go
backend/player/: music.go  v2.go
backend/spotify/: client.go  sync.go
backend/store/: db.go  migrations.go  modals.go  playlists.go  songs.go  users.go
backend/utils/: http_client.go  source.go
tui/: Cargo.toml  LICENSE  README.md  go.mod  ipc.go  main.go  progress_bar.go  types.go
tui/src/: main.rs
