[package]
name = "rizumu_tui"
version = "0.1.0"
description = "music player TUI"
authors = ["cryogon"]
license = "MIT"
edition = "2024"

[dependencies]
rodio = "0.19.0"
crossterm = "0.28.1"
ratatui = "0.29.0"
color-eyre = "0.6.3"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
